static/css/audience_display.css
/*
  Copyright 2014 Team 254. All Rights Reserved.
  Author: pat@patfairbank.com (Patrick Fairbank)
*/

html {
  cursor: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  overflow: hidden;
}
#overlayCentering {
  position: absolute;
  bottom: -210px;
  width: 100%;
  height: 170px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
#matchOverlayContainer {
  display: flex;
}
#matchOverlay {
  display: flex;
  flex-direction: column;
  border: 1px solid #222;
  color: #222;
  font-size: 22px;
}
#matchOverlayTop {
  height: 100px;
  display: flex;
}
.playoff-alliance {
  position: relative;
  top: 31px;
  width: 40px;
  height: 40px;
  padding: 0 5px;
  z-index: -1;
  display: flex;
  align-items: center;
  background-color: #fc0;
  color: #222;
  border: 1px solid #222;
  font-size: 15px;
  font-weight: 200;
}
#leftPlayoffAlliance {
  left: 23px;
  justify-content: start;
  border-top-left-radius: 50%;
  border-bottom-left-radius: 50%;
  border-right: none;
}
#rightPlayoffAlliance {
  right: 23px;
  justify-content: end;
  border-top-right-radius: 50%;
  border-bottom-right-radius: 50%;
  border-left: none;
}
.teams {
  width: 70px;
  height: 100%;
  display: none;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background-color: #fff;
  font-family: "FuturaLT";
  font-size: 20px;
  line-height: 25px;
}
.teams div[data-yellow-card=true] {
  width: 90%;
  height: 32%;
  border-radius: 0.2vw;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fc0;
}
#leftTeams {
  border-right: 1px solid #222;
}
#rightTeams {
  border-left: 1px solid #222;
}
.reversible-left[data-reversed=false], .reversible-right[data-reversed=true] {
  background-color: #ff4444;
}
.reversible-left[data-reversed=true], .reversible-right[data-reversed=false] {
  background-color: #2080ff;
}
.score {
  width: 0;
  height: 100%;
  display: flex;
  justify-content: flex-start;
}
.score-right {
  justify-content: flex-end;
}
.avatars {
  min-width: 50px;
  height: 100%;
  display: none;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}
.avatar {
  height: 25px;
}
.score-number {
  width: 130px;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "FuturaLTBold";
  font-size: 55px;
  color: #fff;
  opacity: 0;
}
.score-right .score-fields {
  align-items: flex-end;
}
.score-fields {
  height: 100%;
  width: 0;
  display: none;
  flex-direction: column;
  justify-content: space-evenly;
  opacity: 0;
}
.score-field {
  display: flex;
  flex-direction: row;
}
.coral-icon {
  width: 35px;
  margin: 0 12px;
}
.algae-icon {
  width: 31px;
  margin: 0 14px;
}
.score-field > div {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 70px;
  font-family: "FuturaLTBold";
  font-size: 27px;
  line-height: 27px;
  color: #fff;
}
#matchCircle {
  position: absolute;
  top: -25px;
  border-radius: 50%;
  width: 150px;
  height: 150px;
  background-color: #fff;
  border: 1px solid #222;
}
#logo {
  position: relative;
  top: 38px;
  height: 70px;
}
#matchTime {
  position: relative;
  top: 17px;
  height: 60px;
  color: #222;
  font-family: "FuturaLTBold";
  font-size: 32px;
  opacity: 0;
}
#eventMatchInfo {
  height: 0;
  display: none;
  justify-content: space-between;
  z-index: -1;
  align-items: flex-end;
  padding: 0 5px;
  background-color: #444;
  font-family: "FuturaLT";
  font-size: 15px;
  line-height: 30px;
  color: #fff;
}
#playoffSeriesStatus {
  width: 40px;
  height: 18px;
  display: none;
  justify-content: center;
  align-items: center;
  background-color: #fc0;
  color: #222;
  border: 1px solid #222;
  border-top: none;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
  font-size: 15px;
  font-weight: 200;
}
#timeoutDetails {
  position: absolute;
  bottom: 95px;
  width: 140px;
  height: 50px;
  z-index: -1;
  padding: 0 20px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #fff;
  color: #222;
  border: 1px solid #222;
}
#timeoutBreakDescription {
  font-weight: bold;
  font-size: 20px;
  opacity: 0;
}
#timeoutNextMatch {
  text-align: center;
  font-weight: bold;
  font-size: 14px;
  opacity: 0;
}
#blindsContainer {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}
.blinds {
  position: fixed;
  top: 0;
  background-size: 200%;
  height: 100%;
  width: 50%;
  overflow: hidden;
}
.blinds.left {
  background-position: left;
  left: -50%;
}
.blinds.right {
  background-position: right;
  right: -50%;
}
.blinds.full {
  width: 100%;
  background-position: center;
  background-size: 100%;
}
.blinds.background {
  background-image: url("/static/img/endofmatch-bg.png");
}
.blindsCenter {
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto auto;
  border-radius: 50%;
  width: 310px;
  height: 310px;
  background-color: #fff;
  border: 1px solid #333;
  box-shadow: 0 0 5px #666;
  text-align: center;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  z-index: 2;
}
.blindsCenter.full {
  left: 0;
  right: 0;
  transform: rotateY(-180deg);
}
.blinds.left .blindsCenter.blank {
  right: -155px;
}
.blinds.full .blindsCenter.blank {
  right: 0;
  left: 0;
}
.blinds.right .blindsCenter.blank {
  left: -155px;
}
#blindsLogo {
  position: relative;
  top: 55px;
  height: 220px;
}
#finalScoreCentering {
  position: fixed;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
#finalScore {
  width: 1000px;
  display: flex;
  flex-direction: column;
  border: 2px solid #333;
  opacity: 0;
}
.final-score-row {
  display: flex;
  flex-direction: row;
}
.final-score {
  width: 50%;
  height: 200px;
  line-height: 200px;
  border-bottom: 2px solid #333;
  color: #fff;
  font-family: "FuturaLTBold";
  font-size: 100px;
  text-align: center;
  text-shadow: 0 0 3px #333;
}
#leftFinalScore {
  padding-right: 150px;
}
#rightFinalScore {
  padding-left: 150px;
}
.final-breakdown {
  height: 380px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #fff;
  color: #222;
  font-family: "FuturaLT";
  font-size: 24px;
}
#leftFinalBreakdown {
  width: 60px;
  padding-right: 10px;
  align-items: flex-end;
}
#rightFinalBreakdown {
  width: 60px;
  padding-left: 10px;
  align-items: flex-start;
}
#centerFinalBreakdown {
  width: 280px;
  align-items: center;
  text-align: center;
  border-left: 2px solid #333;
  border-right: 2px solid #333;
}
.final-breakdown-teams {
  flex-grow: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}
.final-teams {
  width: 250px;
  padding: 20px;
  border-radius: 20px;
}
.final-alliance {
  margin-top: -10px;
  margin-bottom: 10px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  color: #fff;
  font-size: 24px;
}
.final-team-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.final-team-avatar {
  width: 35px;
  height: 35px;
  margin-right: 5px;
}
.final-team-number {
  width: 85px;
  color: #fff;
  font-family: "FuturaLT";
  font-size: 32px;
  line-height: 43px;
  text-align: center;
}
.final-team-card {
  width: 20px;
  margin-left: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.final-team-card div {
  display: none;
}
.final-team-card div[data-card=yellow], .final-team-card div[data-card=red] {
  display: inline-block;
  width: 15px;
  height: 20px;
  border-radius: 4px;
  border: 1px solid #333;
}
.final-team-card div[data-card=yellow] {
  background-color: #da1;
}
.final-team-card div[data-card=red] {
  background-color: #e00;
}
.final-team-rank {
  width: 50px;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}
.final-team-rank img {
  width: 15px;
  margin-right: 3px;
}
.final-team-rank div {
  color: #fff;
  font-size: 20px;
}
.final-destination {
  margin-top: 10px;
  width: 200px;
  height: 45px;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #999;
  font-size: 15px;
  line-height: 18px;
}
.final-destination[data-won=true] {
  background-color: #fc3;
}
#finalEventMatchInfo {
  height: 60px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 0 25px;
  font-family: "FuturaLT";
  font-size: 28px;
  background-color: #444;
  color: #fff;
}
[data-checked=true] {
  color: #0c0;
}
[data-checked=false] {
  color: #e00;
}
.final-footer {
  float: left;
  width: 33.3%;
  white-space: nowrap;
}
#finalMatchName {
  text-align: right;
}
#bracket {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto auto;
  z-index: 1;
  opacity: 0;
  text-align: center;
}
#bracketSvg {
  width: 1920px;
}
#sponsor {
  position: fixed;
  width: 1000px;
  height: 600px;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto auto;
  border: 2px solid #333;
  z-index: 1;
  opacity: 0;
  background-color: #fff;
  text-align: center;
}
#sponsor .carousel-inner, #sponsor .carousel-item {
  height: 100%;
}
.sponsor-image-container {
  width: 1000px;
  height: 500px;
  display: table-cell;
  vertical-align: middle;
}
#sponsor h1, #sponsor h2 {
  font-family: "FuturaLTBold";
  margin: 0;
}
#sponsor h1 {
  font-size: 60px;
  background-color: #444;
  color: #fff;
  padding: 0.25em;
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  height: 96px;
}
#sponsor h2 {
  font-size: 6em;
  padding-top: 145px;
  line-height: 110px;
}
#sponsor img {
  max-width: 800px;
  max-height: 400px;
}
#allianceRankingsCentering {
  position: absolute;
  height: 100%;
  left: 3em;
  top: 3em;
}
#allianceRankings {
  max-width: 11em;
  max-height: 92%;
  display: flex;
  flex-flow: column wrap;
  overflow: hidden;
  background-color: #fff;
  border: 2px solid #222;
  font-size: 2em;
  font-family: "FuturaLT";
}
.unpicked {
  width: 5.5em;
  display: flex;
  justify-content: start;
}
.unpicked-rank {
  width: 1.8em;
  text-align: right;
  color: #999;
}
.unpicked-team {
  margin-left: 0.3em;
  color: #222;
}
#allianceSelectionCentering {
  position: absolute;
  height: 100%;
  top: 3em;
  right: 3em;
}
#allianceSelection {
  display: table-cell;
  vertical-align: middle;
}
#allianceSelectionTable {
  background-color: #fff;
  border: 2px solid #222;
  text-align: center;
  font-family: "FuturaLT";
  font-size: 2.6em;
}
#allianceSelectionTable tr:nth-child(even) {
  background-color: #ccc;
}
.alliance-cell {
  padding: 0px 20px;
  font-family: "FuturaLT";
  color: #999;
}
.selection-cell {
  width: 3.1em;
  color: #222;
}
#lowerThird {
  display: none;
  position: absolute;
  left: -1000px;
  bottom: 100px;
  background-color: #fff;
  border: 1px solid #222;
  color: #222;
  font-size: 30px;
  width: 800px;
  height: 87px;
}
#lowerThirdLogo {
  margin: 12px 20px;
  height: 60px;
  float: left;
}
#lowerThirdTop {
  position: relative;
  top: 10px;
  display: none;
  font-family: "FuturaLTBold";
}
#lowerThirdBottom {
  display: none;
  font-family: "FuturaLT";
  font-size: 23px;
  position: relative;
  top: 5px;
}
#lowerThirdSingle {
  display: none;
  font-family: "FuturaLTBold";
  line-height: 87px;
}

#videoOverlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #000; /* Black background for better video contrast */
  z-index: 100; /* High z-index to overlay all other elements */
  justify-content: center;
  align-items: center;
}

#transitionVideo {
  width: 100%;
  height: 100%;
  object-fit: contain; /* Preserve aspect ratio; use 'cover' if you want to fill the screen */
}

#shiftTime {
  display: flex;
  justify-content: center;      /* horizontal centering */

  background: #f0f0f8;
  color: #fff;
}

